--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
+body {
+    text-align: center;
+    margin-top: 10vh;
+    font-family: Microsoft YaHei;
+    background: rgba(0, 0, 0, 0.07);
+}
+
 h1 {
-    color: green
+    color: #00568bd3;
+    font-family: KaiTi;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+p {
+    margin-top: 30px;
+    font-family: KaiTi;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.block {
+    padding: 10px;
+    background: white;
+    margin: 0 auto;
+    width: 85%;
+    border-radius: 20px;
+}
+
+
+
+
+#carouselExample {
+    margin: 0 auto;
+    object-fit: cover;
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 70vw;
+}
+
+.carousel-inner {
+    border-radius: 20px;
+    margin:0 auto;
+}
+
+.carousel-inner img{
+    width: 100%;
+    height: 100%;
 }
